--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
