add -> wifi multi | reason: "Can access more wifi network / wifi ap"

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	khoih-prog/ESP_WifiManager@^1.12.1
